# books-rs

./: TODO.md
api/: Cargo.toml
api/migrations/: 20210908183817_create_authors.down.sql  20210908183817_create_authors.up.sql  20210908184022_create_genres.down.sql  20210908184022_create_genres.up.sql  20210909221418_create_books.down.sql  20210909221418_create_books.up.sql  20210914170408_add_author_genre.down.sql  20210914170408_add_author_genre.up.sql  20210926213605_add_book_isbn.down.sql  20210926213605_add_book_isbn.up.sql
api/src/: author.rs  book.rs  example.rs  main.rs  models.rs
api/test/: author.http  book.http
